[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-backend"
version = "0.0.0"
description = "LangGraph backend (minimal packaging for editable install)"
authors = [ { name = "vandanamv", email = "vandanareddymv@gmail.com" } ]
dependencies = []
